[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-renamer"
version = "1.2.0"
description = "Rename movie folders and files with TMDB-sourced IMDB-style formatting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.7"
dependencies = [
    "requests",
]

[project.urls]
Homepage = "https://github.com/lorenzowood/media-renamer"

[project.scripts]
media-renamer = "media_renamer:main"

[tool.setuptools]
py-modules = ["media_renamer"]
